# nyaa-cli

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  anilist.py  anime_feed.py  main.py  nyaa.py  pyproject.toml  renamer.py
.github/: FUNDING.yml
nyaacli/: colors.py  logger.py  nyaa_search.py  torrenting.py  utils.py
nyaacli/cli/: __init__.py
