[tool.poetry]
name = "nyaacli"
version = "0.3.0"
description = "A CLI for downloading Anime from https://nyaa.si"
authors = ["John Victor <johnvictorfs@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/johnvictorfs/nyaa-cli"

keywords = ["CLI", "anime"]

classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = ">=3.6,<3.10"
feedparser = "~5.2"
guessit = "3.1.1"
click = "~7.0"
colorama = "~0.4.1"
dataclasses = { version = "~0.7", python = "~3.6" }
questionary = "1.9.0"
rich = "^9.5.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
mypy = "^0.740.0"
flake8 = "^3.7"

[tool.poetry.scripts]
nyaa-cli = 'nyaacli.cli:main'
nyaa = 'nyaacli.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
